2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/18_convfloat.deca
// Description :
//  Test sur l'enrichissement de l'arbre 
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024

{
    int x = 1 ;
    float f = 1.2  ;
    f = f + x; 
}