2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/17_mod_float_int.deca
// Description :
//      opération modulo entre int et float 
// Resultats :
//    Erreur Contexteulle : ligne 13 : l'opération % n'est pas possible entre 'float' et 'int'
//
// Historique :
// cree le 10/01/2024

{
    int x = 1 ;
    float f = 2.0 ;
    int y ;
    y = f%x;
}